--- a/kodelab13/app/src/main/res/layout/activity_main.xml
+++ b/kodelab13/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,29 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/margin"
+        android:id="@+id/box_one_text"
+        style="@style/whiteBox"
         android:layout_width="0dp"
-        android:layout_height="15dp"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_wide"
-        android:layout_marginStart="@dimen/margin_wide"
-        android:layout_marginTop="@dimen/margin_wide"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="@dimen/margin_wide"
-        android:text="Hello World!"
+        android:fontFamily="@font/roboto"
+        android:text="@string/box_one"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/box_two_text"
+        style="@style/whiteBox"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/tam"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/box_two"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/box_one_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
