--- a/kodelab13/app/src/main/res/values/styles.xml
+++ b/kodelab13/app/src/main/res/values/styles.xml
@@ -15,5 +15,6 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:background">@android:color/white</item>
     </style>
 </resources>
